--- a/source/angular-material-badge.css
+++ b/source/angular-material-badge.css
@@ -7,7 +7,7 @@
    color: rgb(255, 255, 255);
    border-radius: 10px;
    box-sizing: border-box;
-   cursor: pointer;
+   /* cursor: pointer; */
    display: inline-block;
    font-family: Roboto, "Helvetica Neue", sans-serif;
    font-size: 11px;
@@ -33,7 +33,7 @@
    text-transform: none;
    white-space: normal;
    word-spacing: 0px;
-   z-index: 9999;
+   z-index: 50;
    writing-mode: horizontal-tb;
    -webkit-font-smoothing: antialiased;
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
